--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -26,6 +26,8 @@ $site-colors:(
     error:#d32f2f,
     primary:#9d3570,
     secondary:#e7941a,
+    blue1:blue,
+    blue2:darkblue,
 );
 
 $site-unit:'rem';
