add menu item and component user-list

--- a/src/app/layout/left-nav/left-nav.component.html
+++ b/src/app/layout/left-nav/left-nav.component.html
@@ -12,5 +12,11 @@
               <span>Events</span>
           </span>
       </a>
+      <a mat-list-item routerLink="users" routerLinkActive="active" matTooltip="Users" disableRipple>
+        <span class="list-item">
+            <mat-icon>perm_identity</mat-icon>
+            <span>Users</span>
+        </span>
+    </a>
   </mat-nav-list>
 </div>
