add card show-users on home page #5

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,4 +11,16 @@
       </mat-card>
     </a>
   </div>
+  <div class="cell small-12 medium-4 u-mb-1">
+    <a routerLink="/users">
+      <mat-card class="goto-event u-bg-secondary u-bg-hvr-alpha25 position-relative u-cursor-pointer">
+        <div class="goto-event-icon u-circle u-circle-0 u-bg-light">
+          <mat-icon class="u-fg-alpha50">navigate_next</mat-icon>
+        </div>
+        <div class="u-fg-light">
+          <h2 class="u-m-1">Show Users</h2>
+        </div>
+      </mat-card>
+    </a>
+  </div>
 </div>
