--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,1 +1,21 @@
-<p>user-list works!</p>
+<div class="grid-x grid-margin-x">
+    <div class="cell small-12 medium-6 align-self-bottom">
+      <h1>Users</h1>
+    </div>
+    <div class="cell">
+      <hr class="u-mt-0">
+    </div>
+  </div>
+  <div [class.align-center]="(users$|async).length==0" class="grid-x grid-margin-x">
+    <div class="cell small-12 medium-4 u-mb-1">
+      <mat-card class="add-new u-bg-secondary u-bg-hvr-alpha25 position-relative u-cursor-pointer" (click)="onAddNewUser()">
+        <div class="add-new-icon u-circle u-circle-0 u-bg-light">
+          <mat-icon class="u-fg-alpha50">add</mat-icon>
+        </div>
+        <div class="u-fg-light"><h2 class="u-m-1">Add New users</h2></div>
+      </mat-card>
+    </div>
+    <div *ngFor="let user of (users$ | async)" class="cell small-12 medium-4 u-mb-1">
+      <app-user-item [user]="user"></app-user-item>
+    </div>
+  </div>
