fix event-item position of edit, delete, info buttons #7

--- a/src/app/event/event-item/event-item.component.scss
+++ b/src/app/event/event-item/event-item.component.scss
@@ -85,6 +85,7 @@
   &-actions {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     color: map-get($site-colors, light);
 
     &-item {
