--- a/src/app/event/event-manage/event-manage.component.html
+++ b/src/app/event/event-manage/event-manage.component.html
@@ -26,7 +26,7 @@
           </mat-form-field>
           <mat-form-field appearance="fill" class="u-width-100">
             <mat-label>Address</mat-label>
-            <input matInput formControlName="address" required />
+            <input matInput formControlName="address" [minlength]="addressMinLength" required />
           </mat-form-field>
           <mat-form-field appearance="fill" class="u-width-100">
             <mat-label>Date</mat-label>
